--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Le Nexus",
+  "name": "Le Nexus - Communauté Francophone de Polkadot",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +18,12 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "description": "Le Nexus - La communauté francophone dédiée à l'éducation blockchain, Polkadot, et OpenGov.",
+  "related_applications": [],
+  "prefer_related_applications": false
 }
